# agent-dealer

./: .gitignore  README.md  bitrix_sync.py  bitrix_sync_final_prod.py  bitrix_sync_final_prod_v2.py  bitrix_sync_final_prod_v3.py  bmad_bitrix_omie_agent_plan.md  deal_fields.json  docker-compose.yml  etl_one_shot.py  opportunity_engine.py  profile.json  pyproject.toml  spa_telemetry_alerts_fields.json  stages_18_pecas_ativa_repescagem.json  stages_2_plano_manutencao.json  stages_4_pos_vendas.json  stages_spa_1088_alertas.json
data_inbox/: Alertas.xlsx  Historico maquinas.xlsx  Insights Abertos.xlsx  População (2).xlsx  Serviço próximo +ou - 100 horas (1).xlsx  data (4).xlsx  pecas - vg(Planilha1).csv
scripts/: import_clients_machines_csv.py  mock_integrations.py  prove_end_to_end.sh  seed_demo_data.sql
src/agent_system/: __init__.py  api.py  app.py  config.py  db.py  main.py  prompts.py  scheduler.py  worker.py
src/agent_system/channels/: openlines_channel.py
src/agent_system/infra/: __init__.py  jobs.py  llm_router.py  observability.py  queue.py  security.py
src/agent_system/integrations/: __init__.py  bitrix.py  omie.py
src/agent_system/services/: campaign.py  conversation.py  deal_closing.py  handoff.py  reporting.py  stock.py  telemetry.py
tests/: test_campaign_requires_dialog.py  test_channel_failure_handoff.py  test_rate_limit_timezone.py
tools/: profile_sources.py
