[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bitrix-omie-agent"
version = "0.1.0"
description = "Proactive commercial agent integrating Bitrix24 WhatsApp and Omie ERP"
requires-python = ">=3.10"
dependencies = [
  "psycopg[binary]>=3.2.0",
  "redis>=5.0.0",
]

[project.scripts]
agent-system = "agent_system.main:main"
agent-worker = "agent_system.worker:main"

[project.optional-dependencies]
dev = []

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
